@@ -1,3 +1,5 @@
+- do not rebuild rpmdb if it is ok 
+  (will workaround #32547) (need perl-URPM 3.01)
 - adapt to perl-URPM 3.00 API to parse pubkey files
 - adjust Uzbek locale (cf locales-uz change)
 - sort languages in "choose language" step in text mode
